Cambio direcciones imagenes

--- a/proyecto/pages/clase10.html
+++ b/proyecto/pages/clase10.html
@@ -81,7 +81,7 @@
                         <span>6 articles</span>
                     </p>
                     <p>$520,00</p>
-                    <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                    <img src="Icons\flechita.svg" alt="arrow">
                 </div>
                 <div class="order">
                     <p>
@@ -89,7 +89,7 @@
                         <span>12 articles</span>
                     </p>
                     <p>$800,00</p>
-                    <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                    <img src="Icons\flechita.svg" alt="arrow">
                 </div>
                 <div class="order">
                     <p>
@@ -97,7 +97,7 @@
                         <span>4 articles</span>
                     </p>
                     <p>$360,00</p>
-                    <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                    <img src="Icons\flechita.svg" alt="arrow">
                 </div>
                 <div class="order">
                     <p>
@@ -105,7 +105,7 @@
                         <span>2 articles</span>
                     </p>
                     <p>$160,00</p>
-                    <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                    <img src="Icons\flechita.svg" alt="arrow">
                 </div>
                 <div class="order">
                     <p>
@@ -113,7 +113,7 @@
                         <span>10 articles</span>
                     </p>
                     <p>$600,00</p>
-                    <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                    <img src="Icons\flechita.svg" alt="arrow">
                 </div>
                 
             </div>            
