--- a/proyecto/pages/clase11.html
+++ b/proyecto/pages/clase11.html
@@ -96,10 +96,10 @@
 </head>
 <body>
     <nav>
-        <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_menu.svg" alt="menu" class="menu">
+        <img src="Icons\icon_menu.svg" alt="menu" class="menu">
 
         <div class="navbar-left">
-            <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Logos\logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="Logos\logo_yard_sale.svg" alt="logo" class="logo">
             <ul>
                 <li><a href="/">All</a></li>
                 <li><a href="/">Clothes</a></li>
@@ -113,7 +113,7 @@
         <div class="navbar-rigth">
             <ul>
                 <li class="navbar-email">arles159@hotmail.com</li>
-                <li class="navbar-shopping-cart"><img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_shopping_cart.svg" alt="shopping-cart"></li>
+                <li class="navbar-shopping-cart"><img src="Icons\icon_shopping_cart.svg" alt="shopping-cart"></li>
                 <li>2</li>
             </ul>            
         </div>
