--- a/proyecto/pages/clase6.html
+++ b/proyecto/pages/clase6.html
@@ -81,7 +81,7 @@
     <section class="main-container">
         <div class="cards-container">
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -261,7 +261,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -273,7 +273,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -285,7 +285,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
@@ -297,7 +297,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$120,00</p>
@@ -309,11 +309,23 @@
                 </div>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
+                <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="" class="product-img">
                 <div class="product-info">
                     <div>
                         <p>$80,00</p>
                         <p>Pokeball life-size</p>
+                    </div>
+                    <figure>
+                        <img src="./Icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="product-card">
+                <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="" class="product-img">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Detective Pikachu Doll</p>
                     </div>
                     <figure>
                         <img src="./Icons/bt_add_to_cart.svg" alt="">
