--- a/proyecto/pages/clase12.html
+++ b/proyecto/pages/clase12.html
@@ -104,15 +104,15 @@
 <body>
     <aside class="product-detail">
         <div class="product-detail-close">
-            <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+            <img src="Icons\icon_close.png" alt="close">
         </div>
-        <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
+        <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
         <div class="product-info">
             <p>$80,00</p>
             <p>Poké Ball life-size</p>
             <p>A Poké Ball (sometimes spelled as Pokéball) is a round device used in the Pokémon series to catch and contain Pokémon. The Poké Ball also serves as a symbol for the series. There are many types of the Poké Ball, such as the Great Ball or Ultra Ball.</p>
             <button class="primary-button add-to-cart-button">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\bt_add_to_cart.svg" alt="add to cart">Add to cart
+                <img src="Icons\bt_add_to_cart.svg" alt="add to cart">Add to cart
             </button>
         </div>
     </aside>
