--- a/proyecto/pages/clase13.html
+++ b/proyecto/pages/clase13.html
@@ -136,7 +136,7 @@
         <div class="my-order-content">
             
             <div class="title-container">
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\flechita.svg" alt="arrow">
+                <img src="Icons\flechita.svg" alt="arrow">
                 <p class="title">Shopping cart</p>
             </div>
             <div class="shopping-cart">
@@ -145,7 +145,7 @@
                 </figure>
                 <p>Pokeball life-size</p>
                 <p>$80,00</p>
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+                <img src="Icons\icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -153,7 +153,7 @@
                 </figure>
                 <p>Pokeball life-size</p>
                 <p>$80,00</p>
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+                <img src="Icons\icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -161,7 +161,7 @@
                 </figure>
                 <p>Pokeball life-size</p>
                 <p>$80,00</p>
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+                <img src="Icons\icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -169,7 +169,7 @@
                 </figure>
                 <p>Detective Pikachu Doll</p>
                 <p>$120,00</p>
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+                <img src="Icons\icon_close.png" alt="close">
             </div>
             <div class="shopping-cart">
                 <figure>
@@ -177,7 +177,7 @@
                 </figure>
                 <p>Detective Pikachu Doll</p>
                 <p>$120,00</p>
-                <img src="C:\Users\Franco\OneDrive\Documentos\Platzi\practice-frontEnd-developer\Icons\icon_close.png" alt="close">
+                <img src="Icons\icon_close.png" alt="close">
             </div>
             <div class="order">
                 <p>
