--- a/proyecto/pages/clase10.html
+++ b/proyecto/pages/clase10.html
@@ -7,75 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;
-            --sm: 14px;
-            --md: 16px;
-            --lg: 18px;            
-        }
-        body {
-            margin: 0;
-            font-family: 'Quicksand', sans-serif;
-        }
-        .my-order {
-            width: 100%;
-            height: 100vh;
-            display: grid;
-            place-items: center;
-        }
-        .title {
-            font-size: var(--lg);
-            margin-bottom: 40px;
-        }
-        .my-order-content {
-            display: grid;
-            grid-template-rows: auto 1fr auto;
-            width: 300px;
-        }
-        .order {
-            display: grid;
-            grid-template-columns: auto 1fr auto;
-            gap: 16px;
-            align-items: center;
-            margin-bottom: 12px;
-        }
-        .order p:nth-child(1) {
-            display: flex;
-            flex-direction: column;
-        }
-        .order p:nth-child(2) {
-            display: flex;
-            flex-direction: column;
-            text-align: end;
-            font-weight: bold;
-        }
-        .order span:nth-child(1) {
-            font-size: var(--md);
-            font-weight: bold;
-        }
-        .order span:nth-child(2) {
-            font-size: var(--sm);
-            color: var(--very-light-pink);
-        }
-        .my-order-container {
-            display: flex;
-            flex-direction: column;
-        }
-    </style>
 </head>
 <body>
     <div class="my-order">
         <div class="my-order-container">
-            <h1 class="title">My orders</h1>
+            <h1 class="title3">My orders</h1>
 
             <div class="my-order-content">
-                <div class="order">
+                <div class="order2">
                     <p>
                         <span>22.11.22</span>
                         <span>6 articles</span>
@@ -83,7 +24,7 @@
                     <p>$520,00</p>
                     <img src="Icons\flechita.svg" alt="arrow">
                 </div>
-                <div class="order">
+                <div class="order2">
                     <p>
                         <span>18.11.22</span>
                         <span>12 articles</span>
@@ -91,7 +32,7 @@
                     <p>$800,00</p>
                     <img src="Icons\flechita.svg" alt="arrow">
                 </div>
-                <div class="order">
+                <div class="order2">
                     <p>
                         <span>16.11.22</span>
                         <span>4 articles</span>
@@ -99,7 +40,7 @@
                     <p>$360,00</p>
                     <img src="Icons\flechita.svg" alt="arrow">
                 </div>
-                <div class="order">
+                <div class="order2">
                     <p>
                         <span>08.11.22</span>
                         <span>2 articles</span>
@@ -107,15 +48,14 @@
                     <p>$160,00</p>
                     <img src="Icons\flechita.svg" alt="arrow">
                 </div>
-                <div class="order">
+                <div class="order2">
                     <p>
                         <span>15.10.22</span>
                         <span>10 articles</span>
                     </p>
                     <p>$600,00</p>
                     <img src="Icons\flechita.svg" alt="arrow">
-                </div>
-                
+                </div>                
             </div>            
         </div>
     </div>
