--- a/proyecto/pages/clase11.html
+++ b/proyecto/pages/clase11.html
@@ -7,99 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;
-            --sm: 14px;
-            --md: 16px;
-            --lg: 18px;            
-        }
-        body {
-            margin: 0;
-            font-family: 'Quicksand', sans-serif;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            padding: 0 24px;
-            border-bottom: 1px solid var(--very-light-pink);
-        }
-        .menu {
-            display: none;
-        }
-        .logo {
-            width: 100px;
-        }
-        .navbar-left {
-            display: flex;
-        }
-        .navbar-left ul {
-            margin-left: 12px;
-        }
-        .navbar-left ul li a {
-            text-decoration: none;
-            color: var(--very-light-pink);
-            border: 1px solid var(--white);
-            padding: 8px;
-            border-radius: 8px;
-        }
-        .navbar-left ul li a:hover {
-            border: 1px solid var(--hospital-green);
-            color: var(--hospital-green);
-        }
-        .navbar-left ul, .navbar-rigth ul{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            height: 60px;
-        }
-        .navbar-email {
-            font-size: var(--sm);
-            color: var(--very-light-pink);
-        }
-        .navbar-shopping-cart {
-            position: relative;
-        }
-        .navbar-rigth ul li:nth-child(3) {
-            width: 14px;
-            height: 14px;
-            background-color: var(--hospital-green);
-            border-radius: 50%;
-            font-size: var(--sm);
-            font-weight: bold;
-            position: absolute;
-            top: 8px;
-            right: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        @media (max-width: 640px) {
-            .menu {
-                display: block;
-            }
-            .navbar-left ul {
-                display: none;
-            }
-            .navbar-email {
-                display: none;
-            }
-        }
-    </style>
 </head>
 <body>
     <nav>
         <img src="Icons\icon_menu.svg" alt="menu" class="menu">
 
         <div class="navbar-left">
-            <img src="Logos\logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="Logos\logo_yard_sale.svg" alt="logo" class="logo2">
             <ul>
                 <li><a href="/">All</a></li>
                 <li><a href="/">Clothes</a></li>
