--- a/proyecto/pages/clase12.html
+++ b/proyecto/pages/clase12.html
@@ -7,99 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;
-            --sm: 14px;
-            --md: 16px;
-            --lg: 18px;            
-        }
-        body {
-            margin: 0;
-            font-family: 'Quicksand', sans-serif;
-        }
-        .primary-button {
-            background-color: var(--hospital-green);
-            border-radius: 8px;
-            border: none;
-            color: var(--white);
-            width: 100%;
-            cursor: pointer;
-            font-size: var(--md);
-            font-weight: bold;
-            height: 50px;
-        }
-        .add-to-cart-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .product-detail {
-            width: 360px;
-            padding-bottom: 24px;
-            position: absolute;
-            right: 0;
-        }
-        .product-detail > img:nth-child(1) {
-            position: absolute;
-            top: 12px;
-            left: 12px;
-        }
-        .product-detail > img:nth-child(1):hover {
-            cursor: pointer;
-        }
-        .product-detail-close {
-            width: 14px;
-            height: 14px;
-            position: absolute;
-            top: 24px;
-            left: 24px;
-            z-index: 2;
-            padding: 12px;
-            border-radius: 50%;
-        }
-        .product-detail >img:nth-child(2){
-            width: 100%;
-            height: 360px;
-            object-fit: cover;
-            border-radius: 0 0 20px 20px;
-            
-        }
-        .product-detail-close:hover {
-            cursor: pointer;
-        }
-        .product-info {
-            margin: 24px 24px 0 24px;
-        }
-        .product-info p:nth-child(1) {
-            font-weight: bold;
-            font-size: var(--md);
-            margin-top: 0;
-            margin-bottom: 4px;
-        }
-        .product-info p:nth-child(2) {
-            color: var(--very-light-pink);
-            font-size: var(--md);
-            margin-top: 0;
-            margin-bottom: 36px;
-        }
-        .product-info p:nth-child(3) {
-            color: var(--very-light-pink);
-            font-size: var(--sm);
-            margin-top: 0;
-            margin-bottom: 36px;
-        }
-        @media (max-width: 640px) {
-            .product-detail {
-                width: 100%;
-            }
-        }
-    </style>
 </head>
 <body>
     <aside class="product-detail">
@@ -107,7 +16,7 @@
             <img src="Icons\icon_close.png" alt="close">
         </div>
         <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
-        <div class="product-info">
+        <div class="product-info2">
             <p>$80,00</p>
             <p>Poké Ball life-size</p>
             <p>A Poké Ball (sometimes spelled as Pokéball) is a round device used in the Pokémon series to catch and contain Pokémon. The Poké Ball also serves as a symbol for the series. There are many types of the Poké Ball, such as the Great Ball or Ultra Ball.</p>
