--- a/proyecto/pages/clase8.html
+++ b/proyecto/pages/clase8.html
@@ -7,56 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;
-            --sm: 14px;
-            --md: 16px;
-            --lg: 18px;            
-        }
-        body {
-            margin: 0;
-            font-family: 'Quicksand', sans-serif;
-        }
-        .mobile-menu {
-            padding: 24px;
-
-        }
-        .mobile-menu a{
-            text-decoration: none;
-            color: var(--black);
-            font-weight: bold;
-            
-        }
-        .mobile-menu ul {
-            padding: 0;
-            margin-top: 24px 0 0;
-            list-style: none;
-        }
-        .mobile-menu ul:nth-child(1) {
-            border-bottom: 1px solid var(--very-light-pink) ;
-        }
-        .mobile-menu ul li {
-            margin-bottom: 24px;
-        }
-        .mobile-menu ul:nth-child(2), .mobile-menu ul:nth-child(3) {
-            margin-top: 72px;
-        }
-        .mobile-menu .email {
-            font-size: var(--sm);
-            font-weight: 300 !important;
-            color: var(--very-light-pink);
-        }
-        .sign-out {
-            color: var(--hospital-green) !important;
-            font-size: var(--sm);
-        }
-    </style>
 </head>
 <body>
     <div class="mobile-menu">
