--- a/proyecto/pages/clase9.html
+++ b/proyecto/pages/clase9.html
@@ -7,98 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;
-            --sm: 14px;
-            --md: 16px;
-            --lg: 18px;            
-        }
-        body {
-            margin: 0;
-            font-family: 'Quicksand', sans-serif;
-        }
-        .my-order {
-            width: 100%;
-            height: 100vh;
-            display: grid;
-            place-items: center;
-        }
-        .title {
-            font-size: var(--lg);
-            margin-bottom: 40px;
-        }
-        .my-order-content {
-            display: grid;
-            grid-template-rows: auto 1fr auto;
-            width: 300px;
-        }
-        .order {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            gap: 16px;
-            align-items: center;
-            background-color: var(--text-input-field);
-            margin-bottom: 24px;
-            border-radius: 8px;
-            padding: 0 24px;
-        }
-        .order p:nth-child(1) {
-            display: flex;
-            flex-direction: column;
-        }
-        .order p:nth-child(2) {
-            display: flex;
-            flex-direction: column;
-            text-align: end;
-            font-weight: bold;
-        }
-        .order span:nth-child(1) {
-            font-size: var(--md);
-            font-weight: bold;
-        }
-        .order span:nth-child(2) {
-            font-size: var(--sm);
-            color: var(--very-light-pink);
-        }
-        .my-order-container {
-            display: flex;
-            flex-direction: column;
-        }
-        .shopping-cart figure img {
-            width: 70px;
-            height: 70px;
-            border-radius: 20px;
-            object-fit: cover;
-        }
-        .shopping-cart figure {
-            margin: 0;
-        }
-        .shopping-cart {
-            display: grid;
-            grid-template-columns: auto 1fr auto auto;
-            gap: 16px;
-            margin-bottom: 24px;
-            align-items: center;
-        }
-        .shopping-cart p:nth-child(2) {
-            color: var(--very-light-pink);
-        }
-        .shopping-cart p:nth-child(3) {
-            font-size: var(--md);
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div class="my-order">
         <div class="my-order-container">
-            <h1 class="title">My order</h1>
+            <h1 class="title3">My order</h1>
 
             <div class="my-order-content">
                 <div class="order">
