--- a/proyecto/MarketPlace/index.html
+++ b/proyecto/MarketPlace/index.html
@@ -7,21 +7,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>Document</title>
-    <style>
-        :root {
-            --white: #FFFFFF;
-            --black: #000000;
-            --very-light-pink: #c7c7c7;
-            --text-input-field: #f7f7f7;
-            --hospital-green: #ACD9B2;            
-        }
-        body {
-            font-family: 'Quicksand', sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="./style/style.css">
+    <title>YardSale: tienda Online</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="Icons\icon_menu.svg" alt="menu" class="menu">
+
+        <div class="navbar-left">
+            <img src="Logos\logo_yard_sale.svg" alt="logo" class="logo2">
+            <ul>
+                <li><a href="/">All</a></li>
+                <li><a href="/">Clothes</a></li>
+                <li><a href="/">Electronics</a></li>
+                <li><a href="/">Furnitures</a></li>
+                <li><a href="/">Toys</a></li>
+                <li><a href="/">Others</a></li>
+            </ul>
+        </div>
+        
+        <div class="navbar-rigth">
+            <ul>
+                <li class="navbar-email">arles159@hotmail.com</li>
+                <li class="navbar-shopping-cart"><img src="Icons\icon_shopping_cart.svg" alt="shopping-cart"></li>
+                <li>2</li>
+            </ul>            
+        </div>
+
+        <div class="desktop-menu inactive">
+            <ul>
+                <li>
+                    <a href="/" class="title">My orders</a>
+                </li>
+                <li>
+                    <a href="/">My account</a>
+                </li>
+                <li>
+                    <a href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <script src="./script/script.js"></script>
 </body>
 </html>
