--- a/proyecto/MarketPlace/index.html
+++ b/proyecto/MarketPlace/index.html
@@ -92,6 +92,66 @@
             </ul>
         </div> 
     </nav>
+    <aside class="product-detail2 inactive">
+        <div class="my-order-content">            
+            <div class="title-container">
+                <img src="Icons\flechita.svg" alt="arrow">
+                <p class="title4">Shopping cart</p>
+            </div>
+            <div class="shopping-cart">
+                <figure>
+                    <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
+                </figure>
+                <p>Pokeball life-size</p>
+                <p>$80,00</p>
+                <img src="Icons\icon_close.png" alt="close">
+            </div>
+            <div class="shopping-cart">
+                <figure>
+                    <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
+                </figure>
+                <p>Pokeball life-size</p>
+                <p>$80,00</p>
+                <img src="Icons\icon_close.png" alt="close">
+            </div>
+            <div class="shopping-cart">
+                <figure>
+                    <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
+                </figure>
+                <p>Pokeball life-size</p>
+                <p>$80,00</p>
+                <img src="Icons\icon_close.png" alt="close">
+            </div>
+            <div class="shopping-cart">
+                <figure>
+                    <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="pokeball">
+                </figure>
+                <p>Detective Pikachu Doll</p>
+                <p>$120,00</p>
+                <img src="Icons\icon_close.png" alt="close">
+            </div>
+            <div class="shopping-cart">
+                <figure>
+                    <img src="img\pexels-carolina-castilla-arias-1716861.jpg" alt="pokeball">
+                </figure>
+                <p>Detective Pikachu Doll</p>
+                <p>$120,00</p>
+                <img src="Icons\icon_close.png" alt="close">
+            </div>
+            <div class="order">
+                <p>
+                    <span>Total</span>
+                </p>
+                <p>$480,00</p>
+            </div>
+            <button class="primary-button2">
+                Checkout
+            </button>            
+        </div>
+    </aside>
+    <section class="main-container">
+        <div class="cards-container">
+    </section>
     <script src="./script/script.js"></script>
 </body>
 </html>
