Funciones de alternancia para los menu

--- a/proyecto/MarketPlace/index.html
+++ b/proyecto/MarketPlace/index.html
@@ -92,6 +92,7 @@
             </ul>
         </div> 
     </nav>
+
     <aside class="product-detail2 inactive">
         <div class="my-order-content">            
             <div class="title-container">
@@ -149,6 +150,22 @@
             </button>            
         </div>
     </aside>
+
+    <aside class="product-detail inactive">
+        <div class="product-detail-close">
+            <img src="Icons\icon_close.png" alt="close">
+        </div>
+        <img src="img\pexels-vincent-ma-janssen-1310847.jpg" alt="pokeball">
+        <div class="product-info2">
+            <p>$80,00</p>
+            <p>Poké Ball life-size</p>
+            <p>A Poké Ball (sometimes spelled as Pokéball) is a round device used in the Pokémon series to catch and contain Pokémon. The Poké Ball also serves as a symbol for the series. There are many types of the Poké Ball, such as the Great Ball or Ultra Ball.</p>
+            <button class="primary-button add-to-cart-button">
+                <img src="Icons\bt_add_to_cart.svg" alt="add to cart">Add to cart
+            </button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="cards-container">
     </section>
